# tl-ranges

./: CMakeLists.txt  README.md
include/type-list/algo/: append.h  concat.h  contains.h  drop.h  drop_while.h  elem.h  empty.h  exists.h  filter.h  find_if.h  first.h  flatten.h  fold_left.h  head.h  partition.h  prepend.h  remove_if.h  second.h  sort.h  split.h  tail.h  take.h  transform.h  unique.h
include/type-list/algo/detail/: apply_op.h  folder_helper.h  merge_sort.h  unique_helper.h
include/type-list/types/: bool_c.h  maybe.h  multi_map.h  size_c.h  tuple_c.h  type_c.h
include/type-list/types/detail/: ebo.h
test/ut/: bool_c_test.cpp  size_c_test.cpp  tuple_c_test.cpp  type_c_test.cpp
test/ut/algo/: append_test.cpp  concat_test.cpp  contains_test.cpp  drop_test.cpp  drop_while_test.cpp  elem_test.cpp  empty_test.cpp  exists_test.cpp  filter_test.cpp  find_if_test.cpp  first_test.cpp  flatten_test.cpp  fold_left_test.cpp  head_test.cpp  partition_test.cpp  prepend_test.cpp  remove_if_test.cpp  second_test.cpp  sort_test.cpp  split_test.cpp  tail_test.cpp  take_test.cpp  transform_test.cpp  unique_test.cpp
